feat:created usercontroller with method  to register user and userRoute
