# src/routes/authRoute.ts
@@ -1,25 +1,0 @@
-
-import  express from "express"
-
-import { register,login} from "../controllers/authController"
-
-
-
-
-export const  authRoute =  express.Router()
-
-authRoute.post("/register",register)
-authRoute.post("/login",login)
-
-
-
-
-
-
-
-
-
-
-
-
-
