# src/routes/userRoute.ts
@@ -1,0 +1,14 @@
+
+import  express from "express"
+
+import { register} from "../controllers/userController"
+
+
+
+
+export const  userRoute =  express.Router()
+
+
+userRoute.post("/",register)
+
+
