# swagger.json
@@ -1,24 +1,15 @@
 {
   "openapi": "3.0.1",
   "info": {
-    "title": "Task-Management-API-with-Authentication",
-    "description": "Documentation for the Task Management API with authentication",
+    "title": "Movie Recommendation Engine API",
+    "description": "API for a movie recommendation engine that suggests movies based on user preferences using collaborative filtering.",
     "version": "1.0.0"
   },
-  "components": {
-    "securitySchemes": {
-      "bearerAuth": {
-        "type": "http",
-        "scheme": "bearer",
-        "bearerFormat": "JWT"
-      }
-    }
-  },
   "paths": {
-    "/auth/register": {
+    "/users": {
       "post": {
-        "description": "Route to register a new user",
-        "tags": ["Auth"],
+        "description": "Register a new user with a unique ID and a list of favorite movie genres.",
+        "tags": ["User"],
         "requestBody": {
           "content": {
             "application/json": {
@@ -28,50 +19,51 @@
                   "username": { "type": "string" },
                   "email": { "type": "string" },
                   "password": { "type": "string" },
-                  "confirmPassword": { "type": "string" }
+                  "genders": {
+                    "type": "array",
+                    "items": {
+                      "type": "string",
+                      "enum": [
+                        "ACTION",
+                        "ADVENTURE",
+                        "COMEDY",
+                        "DRAMA",
+                        "HORROR",
+                        "SCIFI",
+                        "ROMANCE",
+                        "DOCUMENTARY",
+                        "ANIMATION",
+                        "FANTASY",
+                        "THRILLER",
+                        "MYSTERY",
+                        "MUSICAL",
+                        "BIOGRAPHY",
+                        "HISTORICAL",
+                        "SPORT",
+                        "WAR",
+                        "WESTERN",
+                        "FAMILY",
+                        "CRIME",
+                        "NOIR",
+                        "SUPERHERO"
+                      ]
+                    }
+                  }
                 },
+                "required": ["username", "email", "password", "genders"],
                 "example": {
                   "username": "john_doe",
                   "email": "john.doe@example.com",
-                  "password": "strongpassword",
-                  "confirmPassword": "strongpassword"
+                  "password": "securepassword123",
+                  "genders": ["ACTION", "COMEDY"]
                 }
               }
             }
           }
         },
         "responses": {
-          "201": { "description": "User created" },
-          "400": { "description": "username already exists" },
-          "500": { "description": "Internal Server Error" }
-        }
-      }
-    },
-    "/auth/login": {
-      "post": {
-        "description": "Route to log in a user",
-        "tags": ["Auth"],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "email": { "type": "string" },
-                  "password": { "type": "string" }
-                },
-                "example": {
-                  "email": "john.doe@example.com",
-                  "password": "strongpassword"
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": { "description": "Authenticated user" },
-          "400": { "description": "Invalid password" },
-          "404": { "description": "User not found" },
+          "201": { "description": "User created successfully" },
+          "400": { "description": "Invalid data or missing fields" },
           "500": { "description": "Internal Server Error" }
         }
       }
